@@ -1,11 +1,0 @@
-// Feature check for 'PQXX_HAVE_UNREACHABLE'.
-// Generated by generate_cxx_checks.py.
-#include <version>
-#if !defined(__cpp_lib_unreachable)
-#  error "No PQXX_HAVE_UNREACHABLE: __cpp_lib_unreachable is not set."
-#endif
-#if !__cpp_lib_unreachable
-#  error "No PQXX_HAVE_UNREACHABLE: __cpp_lib_unreachable is false."
-#endif
-
-int main() {}
