@@ -17,4 +17,3 @@ PQXX_HAVE_MULTIDIM __cpp_multidimensional_subscript
 PQXX_HAVE_SOURCE_LOCATION __cpp_lib_source_location
 PQXX_HAVE_SPAN __cpp_lib_span
 PQXX_HAVE_SSIZE __cpp_lib_ssize
-PQXX_HAVE_UNREACHABLE __cpp_lib_unreachable
