@@ -179,16 +179,6 @@ AC_COMPILE_IFELSE(
         [Define if this feature is available.]),
     PQXX_HAVE_THREAD_LOCAL=no)
 AC_MSG_RESULT($PQXX_HAVE_THREAD_LOCAL)
-AC_MSG_CHECKING([PQXX_HAVE_UNREACHABLE])
-PQXX_HAVE_UNREACHABLE=yes
-AC_COMPILE_IFELSE(
-    [read_test(PQXX_HAVE_UNREACHABLE.cxx)],
-    AC_DEFINE(
-        [PQXX_HAVE_UNREACHABLE],
-        1,
-        [Define if this feature is available.]),
-    PQXX_HAVE_UNREACHABLE=no)
-AC_MSG_RESULT($PQXX_HAVE_UNREACHABLE)
 AC_MSG_CHECKING([PQXX_HAVE_YEAR_MONTH_DAY])
 PQXX_HAVE_YEAR_MONTH_DAY=yes
 AC_COMPILE_IFELSE(
